--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
 </div>
 
 <div class="container">
-    <div class="work-box" onclick="window.location.href='https://andrebr00.github.io/Drago.gay/tabella';">
-        <p>Inserire progetto</p>
+    <div class="work-box" onclick="window.location.href='https://andrebr00.github.io/Drago.gay/RegistrazioneE-commerce';">
+        <p>E-commerce</p>
     </div>
     <div class="work-box" onclick="window.location.href='https://andrebr00.github.io/Drago.gay/ordinamento';">
         <p>Inserire progetto</p>
