--- a/anagrafica11.html
+++ b/anagrafica11.html
@@ -1,160 +1,229 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>AnagraficaJSON - Avanzata</title>
+  <title>Anagrafica11 - JSON da File</title>
+
   <style>
-    body { font-family: Arial; background:#f4f7fb; text-align:center; margin:0; padding:0; }
-    h2 { background:#2b6cb0; color:white; padding:15px; margin:0; border-bottom:4px solid #1a4f8b; }
-    .container { margin:20px; }
-    button, input[type="text"], select {
-      background:#2b6cb0; color:white; padding:10px 20px; border:none; border-radius:8px;
-      cursor:pointer; margin:5px; font-size:15px; transition:.3s;
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f7fb;
+      margin: 0;
+      padding: 0;
+      text-align: center;
     }
-    button:hover { background:#1a4f8b; }
-    table { width:80%; margin:20px auto; border-collapse:collapse; background:white; }
-    th,td { padding:10px; border:1px solid #ccc; }
-    th { background:#2b6cb0; color:white; }
-    tr:nth-child(even){ background:#f2f2f2; }
-    #messaggio { color:red; font-weight:bold; }
+
+    h2 {
+      background-color: #2b6cb0;
+      color: white;
+      padding: 15px;
+      margin: 0;
+      border-bottom: 4px solid #1a4f8b;
+    }
+
+    .container {
+      margin: 20px;
+    }
+
+    button, label, select, input[type="text"] {
+      background-color: #2b6cb0;
+      color: white;
+      border: none;
+      padding: 10px 20px;
+      border-radius: 8px;
+      cursor: pointer;
+      margin: 5px;
+      font-size: 15px;
+      transition: background-color 0.3s;
+      display: inline-block;
+    }
+
+    button:hover, label:hover {
+      background-color: #1a4f8b;
+    }
+
+    input[type="file"] {
+      display: none;
+    }
+
+    table {
+      border-collapse: collapse;
+      width: 85%;
+      margin: 20px auto;
+      background-color: white;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      border-radius: 10px;
+      overflow: hidden;
+    }
+
+    th, td {
+      border: 1px solid #ccc;
+      padding: 10px;
+      text-align: center;
+    }
+
+    th {
+      background-color: #2b6cb0;
+      color: white;
+    }
+
+    tr:nth-child(even) {
+      background-color: #f2f2f2;
+    }
+
+    #messaggio {
+      color: red;
+      font-weight: bold;
+    }
   </style>
 </head>
+
 <body>
 
-<h2>Tabella Anagrafica (XMLHttpRequest)</h2>
+  <h2>Anagrafica da File JSON</h2>
+  <div id="messaggio"></div>
 
-<div id="messaggio"></div>
+  <div class="container">
+    <label for="fileJson">Carica File JSON</label>
+    <input type="file" id="fileJson" accept=".json">
+    <button id="creaTabella">Crea Tabella</button>
+  </div>
 
-<div class="container">
-  <button id="creaTabella">Carica e crea Tabella</button>
-</div>
+  <table id="tabella"></table>
 
-<table id="tabella"></table>
+  <div class="container">
+    <h3>Ricerca per cognome</h3>
+    <input type="text" id="letteraInserita" maxlength="1" placeholder="Inserisci lettera">
+    <button id="bottoneCerca">Cerca</button>
+  </div>
 
-<div class="container">
-  <h3>Ricerca persone per cognome</h3>
-  <input type="text" id="letteraInserita" maxlength="1" placeholder="Scrivi la prima lettera">
-  <button id="bottoneCerca">Cerca</button>
-</div>
-
-<div class="container">
-  <h3>Scopri la generazione</h3>
-  <select id="dataSelezionata">
-    <option value="">Seleziona una data di nascita</option>
-  </select>
-  <button id="bottoneGenerazione">Calcola generazione</button>
-  <p id="risultatoGenerazione" style="font-weight:bold;"></p>
-</div>
+  <div class="container">
+    <h3>Calcola generazione</h3>
+    <select id="dataSelezionata">
+      <option value="">Seleziona una data</option>
+    </select>
+    <button id="bottoneGenerazione">Calcola</button>
+    <p id="risultatoGenerazione"></p>
+  </div>
 
 <script>
 
 let datiPersone = [];
 
-//----------------------------
-// 1) CARICAMENTO CON XMLHttpRequest
-//----------------------------
-function caricaJSON() {
-    const xhr = new XMLHttpRequest();
-    xhr.open("GET", "persone.json", true);
+// -----------------------------
+// LETTURA FILE JSON DA PC
+// -----------------------------
+document.getElementById("fileJson").addEventListener("change", function () {
+    const file = this.files[0];
+    if (!file) return;
 
-    xhr.onreadystatechange = function() {
-        if (xhr.readyState === 4) {
-            if (xhr.status === 200) {
+    const reader = new FileReader();
 
-                datiPersone = JSON.parse(xhr.responseText);
-                document.getElementById("messaggio").innerHTML = "File JSON caricato correttamente.";
+    reader.onload = function(e) {
+        try {
+            datiPersone = JSON.parse(e.target.result);
+            document.getElementById("messaggio").innerHTML = "File JSON caricato correttamente!";
 
-                // Riempi il select delle date
-                let selezione = document.getElementById("dataSelezionata");
-                selezione.innerHTML = '<option value="">Seleziona una data di nascita</option>';
+            // Aggiorna select generazioni
+            let select = document.getElementById("dataSelezionata");
+            select.innerHTML = '<option value="">Seleziona una data</option>';
 
-                datiPersone.forEach(p => {
-                    let opt = document.createElement("option");
-                    opt.value = p.data;
-                    opt.textContent = p.data + " - " + p.cognome + " " + p.nome;
-                    selezione.appendChild(opt);
-                });
+            datiPersone.forEach(p => {
+                let opt = document.createElement("option");
+                opt.value = p.data;
+                opt.textContent = p.data + " - " + p.cognome + " " + p.nome;
+                select.appendChild(opt);
+            });
 
-                creaTabella();
-
-            } else {
-                document.getElementById("messaggio").innerHTML = "Errore: impossibile caricare il file JSON.";
-            }
+        } catch {
+            document.getElementById("messaggio").innerHTML = "Errore: formato JSON non valido!";
         }
     };
 
-    xhr.send();
-}
+    reader.readAsText(file);
+});
 
-//----------------------------
-// 2) CREA TABELLA
-//----------------------------
-function creaTabella() {
-    const tabella = document.getElementById("tabella");
 
-    let html = "<tr><th>Nome</th><th>Cognome</th><th>Data</th><th>Indirizzo</th><th>Città</th><th>CAP</th></tr>";
+// -----------------------------
+// CREA TABELLA
+// -----------------------------
+document.getElementById("creaTabella").onclick = function () {
+    if (datiPersone.length === 0) {
+        document.getElementById("messaggio").innerHTML = "Carica prima un file JSON!";
+        return;
+    }
+
+    let tab = `
+    <tr>
+        <th>Nome</th><th>Cognome</th><th>Data</th>
+        <th>Indirizzo</th><th>Città</th><th>CAP</th>
+    </tr>`;
 
     datiPersone.forEach(p => {
-        html += `
-            <tr>
-                <td>${p.nome}</td>
-                <td>${p.cognome}</td>
-                <td>${p.data}</td>
-                <td>${p.indirizzo}</td>
-                <td>${p.citta}</td>
-                <td>${p.cap}</td>
-            </tr>
-        `;
-    });
-
-    tabella.innerHTML = html;
-}
-
-//----------------------------
-// 3) RICERCA PER COGNOME
-//----------------------------
-document.getElementById("bottoneCerca").onclick = function() {
-    let lettera = document.getElementById("letteraInserita").value.toUpperCase();
-
-    if (lettera === "") {
-        document.getElementById("messaggio").innerHTML = "Inserisci una lettera.";
-        return;
-    }
-
-    let risultati = datiPersone.filter(p => p.cognome.toUpperCase().startsWith(lettera));
-
-    const tabella = document.getElementById("tabella");
-
-    if (risultati.length === 0) {
-        tabella.innerHTML = "";
-        document.getElementById("messaggio").innerHTML = "Nessun cognome trovato.";
-        return;
-    }
-
-    let html = "<tr><th>Nome</th><th>Cognome</th><th>Data</th><th>Indirizzo</th><th>Città</th><th>CAP</th></tr>";
-
-    risultati.forEach(p => {
-        html += `
+        tab += `
         <tr>
-            <td>${p.nome}</td>
-            <td>${p.cognome}</td>
-            <td>${p.data}</td>
-            <td>${p.indirizzo}</td>
-            <td>${p.citta}</td>
-            <td>${p.cap}</td>
+          <td>${p.nome}</td>
+          <td>${p.cognome}</td>
+          <td>${p.data}</td>
+          <td>${p.indirizzo}</td>
+          <td>${p.citta}</td>
+          <td>${p.cap}</td>
         </tr>`;
     });
 
-    tabella.innerHTML = html;
+    document.getElementById("tabella").innerHTML = tab;
 };
 
-//----------------------------
-// 4) CALCOLO GENERAZIONE
-//----------------------------
-document.getElementById("bottoneGenerazione").onclick = function() {
+
+
+// -----------------------------
+// RICERCA PER COGNOME
+// -----------------------------
+document.getElementById("bottoneCerca").onclick = function () {
+    let lettera = document.getElementById("letteraInserita").value.toUpperCase();
+    if (!lettera) return alert("Inserisci una lettera!");
+
+    let risultati = datiPersone.filter(p => p.cognome.toUpperCase().startsWith(lettera));
+
+    if (risultati.length === 0) {
+        document.getElementById("tabella").innerHTML = "";
+        document.getElementById("messaggio").innerHTML =
+            "Nessun cognome trovato con la lettera " + lettera;
+        return;
+    }
+
+    let tab = `
+    <tr>
+        <th>Nome</th><th>Cognome</th><th>Data</th>
+        <th>Indirizzo</th><th>Città</th><th>CAP</th>
+    </tr>`;
+
+    risultati.forEach(p => {
+        tab += `
+        <tr>
+          <td>${p.nome}</td>
+          <td>${p.cognome}</td>
+          <td>${p.data}</td>
+          <td>${p.indirizzo}</td>
+          <td>${p.citta}</td>
+          <td>${p.cap}</td>
+        </tr>`;
+    });
+
+    document.getElementById("tabella").innerHTML = tab;
+};
+
+
+
+// -----------------------------
+// CALCOLO GENERAZIONE
+// -----------------------------
+document.getElementById("bottoneGenerazione").onclick = function () {
+
     let data = document.getElementById("dataSelezionata").value;
 
-    if (data === "") {
-        document.getElementById("risultatoGenerazione").innerHTML = "Seleziona una data.";
+    if (!data) {
+        document.getElementById("risultatoGenerazione").innerHTML =
+            "Seleziona una data valida!";
         return;
     }
 
@@ -162,22 +231,17 @@ document.getElementById("bottoneGenerazione").onclick = function() {
     let gen = "";
 
     if (anno >= 1901 && anno <= 1927) gen = "Greatest Generation";
-    else if (anno >= 1928 && anno <= 1945) gen = "Generazione Silenziosa";
+    else if (anno >= 1928 && anno <= 1945) gen = "Silent Generation";
     else if (anno >= 1946 && anno <= 1964) gen = "Baby Boomers";
     else if (anno >= 1965 && anno <= 1980) gen = "Generazione X";
     else if (anno >= 1981 && anno <= 1996) gen = "Millennials";
     else if (anno >= 1997 && anno <= 2012) gen = "Generazione Z";
     else if (anno >= 2013) gen = "Generazione Alpha";
-    else gen = "Troppo vecchia";
+    else gen = "Errore nella data";
 
     document.getElementById("risultatoGenerazione").innerHTML =
-        "Appartiene alla " + gen;
+        "Questa persona appartiene alla: <b>" + gen + "</b>";
 };
-
-//----------------------------
-// AVVIO: carica JSON quando clicchi il bottone
-//----------------------------
-document.getElementById("creaTabella").onclick = caricaJSON;
 
 </script>
 
