--- a/anagrafica11.html
+++ b/anagrafica11.html
@@ -1,249 +1,237 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Anagrafica11 - JSON da File</title>
-
+  <title>AnagraficaXLMavanzata</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
-      background-color: #f4f7fb;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-    }
+  font-family: "Segoe UI", Arial, sans-serif;
+  background: linear-gradient(135deg, #e9f1ff, #f7faff);
+  margin: 0;
+  padding: 0;
+  text-align: center;
+  color: #2d3e50;
+}
 
-    h2 {
-      background-color: #2b6cb0;
-      color: white;
-      padding: 15px;
-      margin: 0;
-      border-bottom: 4px solid #1a4f8b;
-    }
+/* Header */
+h2 {
+  background: #1d4e89;
+  color: white;
+  padding: 20px;
+  margin: 0;
+  font-size: 28px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  border-bottom: 5px solid #163b66;
+}
 
-    .container {
-      margin: 20px;
-    }
+/* Containers */
+.container {
+  margin: 25px auto;
+}
 
-    button, label, select, input[type="text"] {
-      background-color: #2b6cb0;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      border-radius: 8px;
-      cursor: pointer;
-      margin: 5px;
-      font-size: 15px;
-      transition: background-color 0.3s;
-      display: inline-block;
-    }
+/* Buttons + Inputs */
+button, select, input[type="text"] {
+  background-color: #1d4e89;
+  color: white;
+  border: none;
+  padding: 12px 25px;
+  border-radius: 10px;
+  cursor: pointer;
+  margin: 6px;
+  font-size: 16px;
+  transition: 0.25s ease;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.15);
+}
 
-    button:hover, label:hover {
-      background-color: #1a4f8b;
-    }
+button:hover, select:hover {
+  background-color: #163b66;
+  transform: translateY(-2px);
+}
 
-    input[type="file"] {
-      display: none;
-    }
+input[type="text"], select {
+  background-color: #ffffff;
+  color: #2d3e50;
+  border: 2px solid #1d4e89;
+  padding: 10px 12px;
+  border-radius: 8px;
+  width: 220px;
+}
 
-    table {
-      border-collapse: collapse;
-      width: 85%;
-      margin: 20px auto;
-      background-color: white;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      border-radius: 10px;
-      overflow: hidden;
-    }
+/* Table */
+table {
+  border-collapse: collapse;
+  width: 85%;
+  margin: 25px auto;
+  background: white;
+  box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+  border-radius: 12px;
+  overflow: hidden;
+}
 
-    th, td {
-      border: 1px solid #ccc;
-      padding: 10px;
-      text-align: center;
-    }
+th {
+  background: #1d4e89;
+  color: white;
+  padding: 14px;
+  font-size: 17px;
+}
 
-    th {
-      background-color: #2b6cb0;
-      color: white;
-    }
+td {
+  padding: 12px;
+  border-bottom: 1px solid #dce3ef;
+}
 
-    tr:nth-child(even) {
-      background-color: #f2f2f2;
-    }
+tr:nth-child(even) {
+  background-color: #f0f4fb;
+}
 
-    #messaggio {
-      color: red;
-      font-weight: bold;
-    }
+tr:hover {
+  background-color: #e0e9f8;
+  transition: 0.2s;
+}
+
+#messaggio {
+  color: #d63333;
+  font-weight: bold;
+  margin-top: 10px;
+}
+
   </style>
 </head>
-
 <body>
 
-  <h2>Anagrafica da File JSON</h2>
+  <h2>Tabella anagrafica con filtri</h2>
   <div id="messaggio"></div>
 
   <div class="container">
-    <label for="fileJson">Carica File JSON</label>
-    <input type="file" id="fileJson" accept=".json">
+    <button id="caricaDati">Carica dati da persone.json</button>
     <button id="creaTabella">Crea Tabella</button>
   </div>
 
   <table id="tabella"></table>
-
+  
   <div class="container">
-    <h3>Ricerca per cognome</h3>
-    <input type="text" id="letteraInserita" maxlength="1" placeholder="Inserisci lettera">
+    <h3>Ricerca persone per cognome</h3>
+    <input type="text" id="letteraInserita" maxlength="1" placeholder="Scrivi la prima lettera del cognome">
     <button id="bottoneCerca">Cerca</button>
   </div>
 
   <div class="container">
-    <h3>Calcola generazione</h3>
+    <h3>Scopri la generazione della persona</h3>
     <select id="dataSelezionata">
-      <option value="">Seleziona una data</option>
+      <option value="">Seleziona una data di nascita </option>
     </select>
-    <button id="bottoneGenerazione">Calcola</button>
-    <p id="risultatoGenerazione"></p>
+    <button id="bottoneGenerazione">Calcola generazione</button>
+    <p id="risultatoGenerazione" style="font-weight:bold;"></p>
   </div>
 
-<script>
+  <script>
+    let datiPersone = [];
 
-let datiPersone = [];
+    document.getElementById("caricaDati").addEventListener("click", function() {
+      const xhr = new XMLHttpRequest();
+      xhr.open("GET", "persone.json", true);
+      xhr.onreadystatechange = function() {
+        if (xhr.readyState === 4) {
+          if (xhr.status === 200) {
+            try {
+              datiPersone = JSON.parse(xhr.responseText);
+              document.getElementById("messaggio").innerHTML = "File persone.json caricato correttamente";
 
-// -----------------------------
-// LETTURA FILE JSON DA PC
-// -----------------------------
-document.getElementById("fileJson").addEventListener("change", function () {
-    const file = this.files[0];
-    if (!file) return;
-
-    const reader = new FileReader();
-
-    reader.onload = function(e) {
-        try {
-            datiPersone = JSON.parse(e.target.result);
-            document.getElementById("messaggio").innerHTML = "File JSON caricato correttamente!";
-
-            // Aggiorna select generazioni
-            let select = document.getElementById("dataSelezionata");
-            select.innerHTML = '<option value="">Seleziona una data</option>';
-
-            datiPersone.forEach(p => {
-                let opt = document.createElement("option");
-                opt.value = p.data;
-                opt.textContent = p.data + " - " + p.cognome + " " + p.nome;
-                select.appendChild(opt);
-            });
-
-        } catch {
-            document.getElementById("messaggio").innerHTML = "Errore: formato JSON non valido!";
+              let selezioneData = document.getElementById("dataSelezionata");
+              selezioneData.innerHTML = '<option value="">Seleziona una data di nascita</option>';
+              for (let i = 0; i < datiPersone.length; i++) {
+                let opzione = document.createElement("option");
+                opzione.value = datiPersone[i].data;
+                opzione.textContent = datiPersone[i].data + " - " + datiPersone[i].cognome + " " + datiPersone[i].nome;
+                selezioneData.appendChild(opzione);
+              }
+            } catch (errore) {
+              document.getElementById("messaggio").innerHTML = "Errore: il file JSON non è valido.";
+            }
+          } else {
+            document.getElementById("messaggio").innerHTML = "Errore nel caricamento del file (status " + xhr.status + ")";
+          }
         }
+      };
+      xhr.send();
+    });
+
+    document.getElementById("creaTabella").addEventListener("click", function() {
+      const tabella = document.getElementById("tabella");
+      if (datiPersone.length === 0) {
+        document.getElementById("messaggio").innerHTML = "Prima carica i dati.";
+        return;
+      }
+      let tab = "<tr><th>Nome</th><th>Cognome</th><th>Data</th><th>Indirizzo</th><th>Città</th><th>CAP</th></tr>";
+      for (let i = 0; i < datiPersone.length; i++) {
+        tab += "<tr>" +
+                  "<td>" + datiPersone[i].nome + "</td>" +
+                  "<td>" + datiPersone[i].cognome + "</td>" +
+                  "<td>" + datiPersone[i].data + "</td>" +
+                  "<td>" + datiPersone[i].indirizzo + "</td>" +
+                  "<td>" + datiPersone[i].citta + "</td>" +
+                  "<td>" + datiPersone[i].cap + "</td>" +
+               "</tr>";
+      }
+      tabella.innerHTML = tab;
+      document.getElementById("messaggio").innerHTML = "Tabella creata con successo";
+    });
+
+    document.getElementById("bottoneCerca").onclick = function() {
+      let lettera = document.getElementById("letteraInserita").value.toUpperCase();
+      let tabella = document.getElementById("tabella");
+
+      if (lettera === "") {
+        document.getElementById("messaggio").innerHTML = "Scrivi una lettera per cercare.";
+        return;
+      }
+
+      let risultati = datiPersone.filter(p => p.cognome.toUpperCase().startsWith(lettera));
+
+      if (risultati.length === 0) {
+        document.getElementById("messaggio").innerHTML = "Nessun cognome trovato con la lettera " + lettera;
+        tabella.innerHTML = "";
+        return;
+      }
+
+      let tab = "<tr><th>Nome</th><th>Cognome</th><th>Data</th><th>Indirizzo</th><th>Città</th><th>CAP</th></tr>";
+      for (let i = 0; i < risultati.length; i++) {
+        tab += "<tr>" +
+                  "<td>" + risultati[i].nome + "</td>" +
+                  "<td>" + risultati[i].cognome + "</td>" +
+                  "<td>" + risultati[i].data + "</td>" +
+                  "<td>" + risultati[i].indirizzo + "</td>" +
+                  "<td>" + risultati[i].citta + "</td>" +
+                  "<td>" + risultati[i].cap + "</td>" +
+               "</tr>";
+      }
+
+      tabella.innerHTML = tab;
+      document.getElementById("messaggio").innerHTML = "Risultati per la lettera: " + lettera;
     };
 
-    reader.readAsText(file);
-});
-
-
-// -----------------------------
-// CREA TABELLA
-// -----------------------------
-document.getElementById("creaTabella").onclick = function () {
-    if (datiPersone.length === 0) {
-        document.getElementById("messaggio").innerHTML = "Carica prima un file JSON!";
+    document.getElementById("bottoneGenerazione").onclick = function() {
+      let dataInserita = document.getElementById("dataSelezionata").value;
+      if (dataInserita === "") {
+        document.getElementById("risultatoGenerazione").innerHTML = "Seleziona una data.";
         return;
-    }
+      }
 
-    let tab = `
-    <tr>
-        <th>Nome</th><th>Cognome</th><th>Data</th>
-        <th>Indirizzo</th><th>Città</th><th>CAP</th>
-    </tr>`;
+      let anno = new Date(dataInserita).getFullYear();
+      let generazione = "";
 
-    datiPersone.forEach(p => {
-        tab += `
-        <tr>
-          <td>${p.nome}</td>
-          <td>${p.cognome}</td>
-          <td>${p.data}</td>
-          <td>${p.indirizzo}</td>
-          <td>${p.citta}</td>
-          <td>${p.cap}</td>
-        </tr>`;
-    });
+      if (anno >= 1901 && anno <= 1927) generazione = "Greatest Generation";
+      else if (anno >= 1928 && anno <= 1945) generazione = "Generazione Silenziosa";
+      else if (anno >= 1946 && anno <= 1964) generazione = "Baby Boomers";
+      else if (anno >= 1965 && anno <= 1980) generazione = "Generazione X";
+      else if (anno >= 1981 && anno <= 1996) generazione = "Millennials";
+      else if (anno >= 1997 && anno <= 2012) generazione = "Generazione Z";
+      else if (anno >= 2013) generazione = "Generazione Alpha";
+      else generazione = "Generazione troppo vecchia";
 
-    document.getElementById("tabella").innerHTML = tab;
-};
-
-
-
-// -----------------------------
-// RICERCA PER COGNOME
-// -----------------------------
-document.getElementById("bottoneCerca").onclick = function () {
-    let lettera = document.getElementById("letteraInserita").value.toUpperCase();
-    if (!lettera) return alert("Inserisci una lettera!");
-
-    let risultati = datiPersone.filter(p => p.cognome.toUpperCase().startsWith(lettera));
-
-    if (risultati.length === 0) {
-        document.getElementById("tabella").innerHTML = "";
-        document.getElementById("messaggio").innerHTML =
-            "Nessun cognome trovato con la lettera " + lettera;
-        return;
-    }
-
-    let tab = `
-    <tr>
-        <th>Nome</th><th>Cognome</th><th>Data</th>
-        <th>Indirizzo</th><th>Città</th><th>CAP</th>
-    </tr>`;
-
-    risultati.forEach(p => {
-        tab += `
-        <tr>
-          <td>${p.nome}</td>
-          <td>${p.cognome}</td>
-          <td>${p.data}</td>
-          <td>${p.indirizzo}</td>
-          <td>${p.citta}</td>
-          <td>${p.cap}</td>
-        </tr>`;
-    });
-
-    document.getElementById("tabella").innerHTML = tab;
-};
-
-
-
-// -----------------------------
-// CALCOLO GENERAZIONE
-// -----------------------------
-document.getElementById("bottoneGenerazione").onclick = function () {
-
-    let data = document.getElementById("dataSelezionata").value;
-
-    if (!data) {
-        document.getElementById("risultatoGenerazione").innerHTML =
-            "Seleziona una data valida!";
-        return;
-    }
-
-    let anno = new Date(data).getFullYear();
-    let gen = "";
-
-    if (anno >= 1901 && anno <= 1927) gen = "Greatest Generation";
-    else if (anno >= 1928 && anno <= 1945) gen = "Silent Generation";
-    else if (anno >= 1946 && anno <= 1964) gen = "Baby Boomers";
-    else if (anno >= 1965 && anno <= 1980) gen = "Generazione X";
-    else if (anno >= 1981 && anno <= 1996) gen = "Millennials";
-    else if (anno >= 1997 && anno <= 2012) gen = "Generazione Z";
-    else if (anno >= 2013) gen = "Generazione Alpha";
-    else gen = "Errore nella data";
-
-    document.getElementById("risultatoGenerazione").innerHTML =
-        "Questa persona appartiene alla: <b>" + gen + "</b>";
-};
-
-</script>
-
+      document.getElementById("risultatoGenerazione").innerHTML =
+        "Appartiene alla " + generazione;
+    };
+  </script>
 </body>
 </html>
