--- a/anagrafica11.html
+++ b/anagrafica11.html
@@ -246,12 +246,12 @@
       let anno = new Date(dataInserita).getFullYear();
       let generazione = "";
 
-      if (anno >= 1901 && anno <= 1927) generazione = "Greatest Generation";
-      else if (anno >= 1928 && anno <= 1945) generazione = "Generazione Silenziosa";
-      else if (anno >= 1946 && anno <= 1964) generazione = "Baby Boomers";
-      else if (anno >= 1965 && anno <= 1980) generazione = "Generazione X";
-      else if (anno >= 1981 && anno <= 1996) generazione = "Millennials";
-      else if (anno >= 1997 && anno <= 2012) generazione = "Generazione Z";
+      if (anno >= 1901 && anno <= 1927) generazione = "greatest generation";
+      else if (anno >= 1928 && anno <= 1945) generazione = "generazione silenziosa";
+      else if (anno >= 1946 && anno <= 1964) generazione = "generazione dei baby boomers";
+      else if (anno >= 1965 && anno <= 1980) generazione = "generazione X";
+      else if (anno >= 1981 && anno <= 1996) generazione = "generazione dei millennials";
+      else if (anno >= 1997 && anno <= 2012) generazione = "generazione Z";
       else if (anno >= 2013) generazione = "Generazione Alpha";
       else generazione = "Generazione troppo vecchia";
 
