--- a/registrazionexml.html
+++ b/registrazionexml.html
@@ -91,10 +91,8 @@
 
   <script>
     document.addEventListener("DOMContentLoaded", function () {
-
-      // CARICAMENTO XML CON XHR
       const xhr = new XMLHttpRequest();
-      xhr.open("GET", "catalogo.xml", true);
+      xhr.open("GET", "raw.githack.com/Andrebr00/Drago.gay/main/telefoni.xml", true);
 
       xhr.onreadystatechange = function () {
         if (xhr.readyState === 4 && xhr.status === 200) {
@@ -122,7 +120,6 @@
 
       xhr.send();
 
-      // REGISTRAZIONE UTENTE
       document.getElementById("formRegistrazione").addEventListener("submit", function (e) {
         e.preventDefault();
 
